--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,35 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # dependencies
-node_modules/
+*/node_modules/
 
 # Expo
-.expo/
-dist/
-web-build/
+*/.expo/
+*/dist/
+*/web-build/
 
 # Native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+*/*.orig.*
+*/*.jks
+*/*.p8
+*/*.p12
+*/*.key
+*/*.mobileprovision
 
 # Metro
-.metro-health-check*
+*/.metro-health-check*
 
 # debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+*/npm-debug.*
+*/yarn-debug.*
+*/yarn-error.*
 
 # macOS
-.DS_Store
-*.pem
+*/.DS_Store
+*/*.pem
 
 # local env files
-.env*.local
+*/.env*.local
 
 # typescript
-*.tsbuildinfo
+*/*.tsbuildinfo
